[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonfix-llm"
version = "0.1.0"
description = "Repair broken JSON from LLM outputs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "shashi kundan", email = "shashikundan0001@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]
keywords = ["json", "llm", "repair", "fix", "ai"]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/your/jsonfix-llm"
Repository = "https://github.com/your/jsonfix-llm"
BugTracker = "https://github.com/your/jsonfix-llm/issues"

[project.scripts]
jsonfix = "jsonfix_llm.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["src/jsonfix_llm"]
