[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonfix-llm"
version = "0.1.1"
description = "Repair broken JSON from LLM outputs"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "Shashi Kundan", email = "shashikundan0001@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]
keywords = [
    "json", "llm", "repair", "fix", "ai", "markdown",
    "extraction", "parsing", "recovery", "json-repair",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/shashi3070/jsonfix-llm"
Repository = "https://github.com/shashi3070/jsonfix-llm"
Documentation = "https://github.com/shashi3070/jsonfix-llm#readme"
Issues = "https://github.com/shashi3070/jsonfix-llm/issues"
Changelog = "https://github.com/shashi3070/jsonfix-llm/blob/main/CHANGELOG.md"

[project.scripts]
jsonfix = "jsonfix_llm.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["src/jsonfix_llm"]
